--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <img src="assets/images/20211006-195110-12-694x547.jpg" alt="Sweet Moon Yale Town Vancouver" data-slide-to="0" data-bs-slide-to="0">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Grouse Mt.</strong><br>Vancouver 2021<br></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Grouse Mountain</strong><br>Vancouver 2021<br></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Acrylic on Wood Board</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">8" x 12"&nbsp; &nbsp; &nbsp;</p>
                     </div>
@@ -319,7 +319,7 @@
                         <img src="assets/images/20211020-135240-1-12-694x451.jpg" alt="Mobirise Website Builder">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Two Eagles</strong><br><div>Grouse Mt.Vancouver 2021</div></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Two Eagles</strong><br><div>Grouse Mountain 2021</div></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Acrylic on Wood Board</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">8" x 12"&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
                     </div>
@@ -354,7 +354,7 @@
                         <img src="assets/images/20211030-215314-1-673x539.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>The Black Tush</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>The Black Tusk</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>BC, Canada 2021</em><br><em>Acrylic on Wood Board</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">8" x 12"&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
                     </div>
@@ -403,7 +403,7 @@
                         <img src="assets/images/20211129-182402-12-673x521.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Thurderbird, Grouse Mt.</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Thunderbird, Grouse Mountain.</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Vancouver 2021</em><br><em>Acrylic on Wood Board</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">8" x 12"&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
                     </div>
@@ -538,7 +538,7 @@
                         <img src="assets/images/20211030-144913-1-673x521.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Dancing Eagles in Grouse Mt.&nbsp;&nbsp;</strong><br>Vancouver 2021</h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Dancing Eagles in Grouse Mountain&nbsp;&nbsp;</strong><br>Vancouver 2021</h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Acrylic on Canvas</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">18" x 24"&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
                     </div>
@@ -550,7 +550,7 @@
                         <img src="assets/images/20211114-102222-1-673x488.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Rainbow in Mt. Baker</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Rainbow in Mountain Baker</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Washington USA 2021</em><br><em>Acrylic on Paper</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">16"" x 20""&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
                     </div>
@@ -599,7 +599,7 @@
                         <img src="assets/images/20220102-204145-12-673x530.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Mt. Baker</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Mountain Baker</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Washington, USA 2022</em><em><br></em><em>Acrylic on Wood Board</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">12" x 16"&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
                     </div>
@@ -953,7 +953,7 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-7 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/T1usW1_VHMo?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-                <p class="mbr-description pt-2 mbr-fonts-style display-4">Picture of stillness, Indulge in the silent, is a mind that escape <br>Enjoy the peace in the solitude, crying out of joy<br>Bit by bit, little by little, leaving marks of life<br><br></p>
+                <p class="mbr-description pt-2 mbr-fonts-style display-4">Picture of stillness, Indulge in the silent, is a mind that escapes<br>Enjoy the peace in the solitude, crying out of joy<br>Bit by bit, little by little, leaving marks of life<br><br></p>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
@@ -1081,7 +1081,7 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5"><strong>Tao of Self Meaning</strong><strong><br></strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Although much of Sze Oi’s art is influence by nature, she comments: ‘The Tao is a way of seeing nature: it absorbs the spirit of residing in each and every form or essence experienced; it absorbs the various changing aspects of the scene – the wind that is moving through it, the music that is in the air, and the light that is forever changing….The practice of seeing and relating to nature, and then expressing both in painting, foster spontaneity and ‘pure experience’ in an artist. The artist learns to perceive with the desirelessness attitude, and to let the essence of existence, God or Tao, reveal itself. <br><br><br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">Although much of Sze Oi’s art is influenced by nature, she comments: ‘The Tao is a way of seeing nature: it absorbs the spirit of residing in each and every form or essence experienced; it absorbs the various changing aspects of the scene – the wind that is moving through it, the music that is in the air, and the light that is forever changing….The practice of seeing and relating to nature, and then expressing both in painting, foster spontaneity and ‘pure experience’ in an artist. The artist learns to perceive with the desirelessness attitude, and to let the essence of existence, God or Tao, reveal itself. <br><br><br></p>
                 </div>
             </div>
         </div>
@@ -1222,12 +1222,12 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/cZvEi-A_ftc?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-                <p class="mbr-description pt-2 mbr-fonts-style display-4">When you no longer trying to prove yourself, human beauty blooms! <br>When you allow yourself to be yourself, you can be real and  sincere.</p>
+                <p class="mbr-description pt-2 mbr-fonts-style display-4">When you are no longer trying to prove yourself, human beauty blooms! <br>When you allow yourself to be yourself, you can be real and  sincere.</p>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5"><strong>Human Essence</strong></h5>
-                    <p class="mbr-text mbr-fonts-style display-7">Sze Oi is picking up her drawing tools again after 25 years art psychotherapy practice. She joins a quilting club and practicing life drawing. She suggests that these two medias fit perfectly to express her work.  She has a gift to recognize human inner emotions, it is analogy as a naked model in front of her. She tries her best to portray the beauty essence of human being and reveal it from inside out.  Life gives scrapes. There are tastes of sweet, sour, bitter, hot.... She puts them together in a beautiful quilt. <br><br> <br><br><br><br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">Sze Oi is picking up her drawing tools again after 25 years art psychotherapy practice. She has joined a quilting club and is practicing life drawing. She suggests that these two medias fit perfectly to express her work.  She has a gift to recognize human inner emotions. She tries her best to portray the beauty essence of human beings and reveal it from inside out.  Life gives scrapes. There are tastes of sweet, sour, bitter, hot.... She puts them together in a beautiful quilt. <br><br> <br><br><br><br></p>
                 </div>
             </div>
         </div>
@@ -1336,7 +1336,7 @@ Evolving from being an artist and art educator to becoming an art therapist was 
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/594461" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with  &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/594461" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-software.html">Landing Page Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
